--- a/restaurant-app/backend/.env
+++ b/restaurant-app/backend/.env
@@ -3,3 +3,8 @@ MONGO_DB_CONNECTION_STRING=mongodb+srv://admin:gTHRV1RAMRAAu54D@restaurant-app.x
 # Auth0
 AUTH0_AUDIENCE=restaurant-app-api
 AUTH0_ISSUER_BASE_URL=https://dev-em2fsv5c2qgxs6lw.us.auth0.com/
+
+#Cloudinary
+CLOUDINARY_CLOUD_NAME=dcyjoayjp
+CLOUDINARY_API_KEY=568415121421485	 
+CLOUDINARY_API_SECRET=FdXG4CoQrz1Zro1PgSuUsEJkrKI
